--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "deps/otto-gfx"]
 	path = deps/otto-gfx
 	url = git@github.com:NextThingCo/otto-gfx.git
-[submodule "deps/otto-sdk"]
-	path = deps/otto-sdk
-	url = git@github.com:NextThingCo/otto-sdk.git
 [submodule "deps/Choreograph"]
 	path = deps/Choreograph
 	url = https://github.com/sansumbrella/Choreograph.git
@@ -13,3 +10,6 @@
 [submodule "deps/otto-utils"]
 	path = deps/otto-utils
 	url = git@github.com:NextThingCo/otto-utils.git
+[submodule "deps/otto-runner"]
+	path = deps/otto-runner
+	url = git@github.com:NextThingCo/otto-runner.git
