Macross toolchain changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,21 @@
 cmake_minimum_required(VERSION 2.8)
 project(otto_gif_mode)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "-pg ${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OTTO_BUILD_ROOT}/build")
 
-set(OTTO_GFX "deps/otto-gfx")
-set(OTTO_SDK "deps/otto-sdk")
-set(ENTITYX  "deps/entityx")
-set(OTTO_HW  "deps/libOttoHardware")
+set(OTTO_GFX "/opt/stak/otto/libraries/otto-gfx")
+set(OTTO_SDK "/opt/stak/otto/otto-runner")
+set(ENTITYX  "/opt/stak/otto/libraries/entityx")
+# set(OTTO_HW  "deps/libOttoHardware")
 
-add_subdirectory(${OTTO_GFX})
-add_subdirectory(${OTTO_HW})
+# add_subdirectory(${OTTO_GFX})
+# add_subdirectory(${OTTO_HW})
 
 set(ENTITYX_DT_TYPE float)
 set(ENTITYX_BUILD_SHARED OFF CACHE BOOL "No shared libs plz")
 set(CROSS_COMPILING ON) # Needed for EntityX's C++11 checks
-add_subdirectory(${ENTITYX})
+# add_subdirectory(${ENTITYX})
 
 include_directories(
   deps/Choreograph/src
@@ -23,11 +24,11 @@ include_directories(
   ${OTTO_GFX}/deps/glm/glm
   ${OTTO_GFX}/src
   ${OTTO_SDK}/src
-  ${OTTO_HW}/include
+  # ${OTTO_HW}/include
   lib)
 
 include_directories(SYSTEM "/opt/vc/include" # VideoCore
-                           "/opt/stak-sdk/include")
+                           "/opt/stak/sdk/include")
 
 file(GLOB deps_src "deps/Choreograph/src/choreograph/*.cpp")
 file(GLOB src "src/*.cpp")
